fail on error so cruise control is notified, increase permgen space for where there are many tests, don't process backlog features